--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 dependencies:
-  - { role: ansible-git }
-  - { role: ansible-oracle-java }
+  - { role: avinash6784.git }
+  - { role: avinash6784.oracle-java }
 
 galaxy_info:
   author: avinash6784 (Avinash Pawar)
