chore(http port) Jetty failed to start when the Port number is lower than 1024, since it's reserved for root; then, the process default user will be root when config asks for a lower port. Also, port is a reserved Ansible variable, it was replaced with jenkins_http_port

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,11 +2,16 @@
 # Jenkins vars
 jenkins_dest: /opt/jenkins
 jenkins_lib: /var/lib/jenkins
-port: 8081
+jenkins_http_port: 8081
 prefix: '"--prefix=/jenkins/"'
 jenkins:
   cli_dest: '{{ jenkins_dest }}/jenkins-cli.jar' # Jenkins CLI destination
   updates_dest: '{{ jenkins_dest }}/updates_jenkins.json' # Jenkins updates file
-jenkins_api_url: "http://localhost:{{ port }}{{ prefix }}"
+jenkins_api_url: "http://localhost:{{ jenkins_http_port }}{{ prefix }}"
 jenkins_cli_cmd: "java -jar {{ jenkins.cli_dest }} -s {{ jenkins_api_url }}"
 java_home: /opt/jdk1.8.0_111
+jenkins_configs:
+  JENKINS_PORT: "{{ jenkins_http_port }}"
+  JENKINS_JAVA_CMD: "{{ java_home }}/bin/java"
+  JENKINS_ARGS: "{{ prefix }}"
+  JENKINS_USER: "{% if jenkins_http_port < 1025 %}root{% else %}jenkins{% endif %}"
